# fleet_compute_cmc

./: Jenkinsfile  Makefile  Makefile_cmc  Makefile_lmc  README.md  release.sh  release_cmc.sh  release_lmc.sh  service.mk
Virtlyst/: CMakeCache.txt  CMakeLists.txt  Dockerfile  Dockerfile.build  Makefile  config.ini  create.sql
Virtlyst/root/src/: base.html  create.html  hostdetail.html  instance.html  instances.html  login.html  networks.html  servers.html  sidebar.html  storage.html  storages.html
Virtlyst/root/src/users/: change_password.html  create.html  index.html
Virtlyst/root/static/css/: main.css
Virtlyst/root/static/css/bootstrap/: bootstrap.min.css
Virtlyst/root/static/js/: check-password.js
Virtlyst/root/static/js/novnc/: rfb.js
Virtlyst/src/: CMakeLists.txt  create.cpp  create.h  info.cpp  infrastructure.cpp  networks.cpp  networks.h  root.cpp  server.cpp  server.h  sqluserstore.cpp  sqluserstore.h  storages.cpp  storages.h  users.cpp  users.h  virtlyst.cpp  virtlyst.h
Virtlyst/src/lib/: connection.cpp  connection.h  storagepool.cpp  storagevol.cpp
Virtlyst_old/: CMakeLists.txt  Dockerfile.lmc  config.ini
Virtlyst_old/root/src/: base.html
Virtlyst_old/src/: virtlyst.cpp  virtlyst.h
Virtlyst_old/src/lib/: connection.cpp  domain.cpp  storagevol.cpp
provisioning/: provision.yaml  shore.yaml
services/: Jenkinsfile  Makefile  release.sh
services/Virtlyst/src/: create.cpp  instances.cpp
services/cmc/: Jenkinsfile  Makefile  release.sh
services/cmc/Virtlyst/: Dockerfile.build  create.sql  virtlyst
(+18 files in other folders)
